Uncommitted work from yesterday

--- a/week_6/tuesday/collapsible_side_menu/product.html
+++ b/week_6/tuesday/collapsible_side_menu/product.html
@@ -10,12 +10,13 @@
 
   <!-- Put your challenge-specific CSS in here -->
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="elusive.css">
   <title></title>
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>My Super SaaS</h1>
+      <h1><a href='#' class='menu-show'><i class="icon-dashboard"></i></a>  My Super SaaS</h1>
     </header>
     <nav>
       <ul>
@@ -117,4 +118,5 @@
     </div>
   </div>
 </body>
+  <script src="/js/application.js"></script>
 </html>
